--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,13 @@ services:
 
   backend:
     build:
-      context: ./backend/ProcrastinatrAPI
+      context: ./ProcrastinatrAPI
       dockerfile: Dockerfile
     ports:
       - "8081:8081"
     environment:
       - ASPNETCORE_URLS=http://+:8081
-      - ConnectionStrings__MongoDb=mongodb://mongo:27017
+      - ConnectionStrings__MongoDb=${MONGO_CONNECTION}
     depends_on:
       - mongo
     networks:
@@ -37,7 +37,6 @@ services:
 
 volumes:
   mongo-data:
-
 
 networks:
   app-network:
