--- a/.gitignore
+++ b/.gitignore
@@ -404,3 +404,8 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+
+.env
+/ProcrastinatrAPI/appsettings.Development.json
+/ProcrastinatrAPI/appsettings.json
