--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-   mongo:
+  mongo:
     image: mongo
     container_name: procrastinatr-mongo
     restart: always
@@ -18,8 +18,7 @@ services:
       - "8081:8081"
     environment:
       - ASPNETCORE_URLS=http://+:8081
-      - ConnectionStrings__MongoDb=mongodb://<your-mongodb-connectionstring>
-
+      - ConnectionStrings__MongoDb=${MONGO_CONNECTIONSTRING}
     depends_on:
       - mongo
     networks:
@@ -37,6 +36,9 @@ services:
     networks:
       - app-network
     restart: on-failure
+
+volumes:
+  mongo-data:
 
 networks:
   app-network:
